syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option go_package = "github.com/BeDreamCoder/uwavm/contract/go/pb";

package contract;

message ArgPair {
  string key = 1;
  bytes value = 2;
}

message CallArgs {
  string method = 1;
  repeated ArgPair args = 2;
  string caller = 3;
}

message SyscallHeader {
  int64 ctxid = 1;
}

message PutRequest {
  SyscallHeader header = 1;
  bytes key = 2;
  bytes value = 3;
}

message PutResponse {
}

message GetRequest {
  SyscallHeader header = 1;
  bytes key = 2;
}

message GetResponse {
  bytes value = 1;
}

message DeleteRequest {
  SyscallHeader header = 1;
  bytes key = 2;
}

message DeleteResponse {
}

message TransferRequest {
  SyscallHeader header = 1;
  string from = 2;
  string to = 3;
  string amount = 4;
}

message TransferResponse {
}

message ContractCallRequest {
  SyscallHeader header = 1;
  string module = 2;
  string contract = 3;
  string method = 4;
  repeated ArgPair args = 5;
}

message ContractCallResponse {
  Response response = 1;
}

message Response {
  int32  status = 1;
  string message = 2;
  bytes  body = 3;
}

message SetOutputRequest {
	SyscallHeader header = 1;
	Response response = 2;
}
message SetOutputResponse {
}

message GetCallArgsRequest {
	SyscallHeader header = 1;
}
